Cherry-pick r289121. rdar://problem/88492251

Fix App Privacy Report redirect attribution
    https://bugs.webkit.org/show_bug.cgi?id=236111

    Reviewed by Brent Fulgham.

    Source/WebCore:

    Test: http/tests/app-privacy-report/user-attribution-redirect.html
    Test: http/tests/app-privacy-report/app-attribution-redirect.html

    * platform/network/cf/ResourceRequestCFNet.cpp:
    (WebCore::ResourceRequest::updateFromDelegatePreservingOldProperties):

    Source/WebKit:

    * NetworkProcess/cocoa/NetworkSessionCocoa.mm:
    (-[WKNetworkSessionDelegate URLSession:task:willPerformHTTPRedirection:newRequest:completionHandler:]):

    LayoutTests:

    * http/tests/app-privacy-report/resources/redirect.js: Added.
    * http/tests/app-privacy-report/app-attribution-redirect-expected.txt: Added.
    * http/tests/app-privacy-report/app-attribution-redirect.html: Added.
    * http/tests/app-privacy-report/user-attribution-redirect-expected.txt: Added.
    * http/tests/app-privacy-report/user-attribution-redirect.html: Added.

    Canonical link: https://commits.webkit.org/246818@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@289121 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/245886.247@safari-613-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-613-branch@290918 268f45cc-cd09-0410-ab3c-d52691b4dbfc